@@ -1,3 +1,6 @@
+* use NotifyAlert from sugar.graphics.alert instead of local
+  copy (thanks erikos!) (morgs)
+
 27
 
 * Use sugar.graphics.alert to show status info (morgs)
